# aipaqu

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  worker.py
backend/app/api/routes/: auth.py  briefs.py  health.py
backend/app/core/: auth.py  briefs.py  config.py  errors.py
backend/tests/: test_auth.py  test_briefs.py  test_cors.py  test_health.py
docs/: 01-product-requirements.md  02-system-architecture.md  03-data-model.md  04-api-design.md  05-langgraph-workflow.md  05-workflow-engine.md  06-frontend-ux.md  07-security.md  08-deployment-operations.md  09-implementation-roadmap.md  10-engineering-baseline.md  11-crawler-reference-design.md
docs/decisions/: ADR-001-modular-monolith.md  ADR-002-storage-responsibilities.md  ADR-003-versioned-workflows.md  ADR-004-mvp-closed-loop.md  ADR-005-controlled-access-challenges.md  ADR-006-framework-neutral-workflow-engine.md  ADR-007-periodic-reports-use-daily-snapshots.md  README.md
frontend/: Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/assets/css/: main.css
