[project]
name = "aipaqu-backend"
version = "0.1.0"
description = "FastAPI backend for the intelligent intelligence and periodic report platform."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "pydantic-settings>=2.3,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"
